Prevent long venue names from arrow overlap

--- a/www/stylus/checkins.styl
+++ b/www/stylus/checkins.styl
@@ -55,6 +55,7 @@
         width 50px
 
     .venue
+        margin-right 30px
         overflow hidden
         text-overflow ellipsis
         white-space nowrap
